Botao Produto funcionando

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.DarkActionBar">
-        <activity android:name=".activities.ActivityProduto"></activity>
+        <activity android:name=".activities.ActivityProduto"
+            android:label="Entrada em Produto"></activity>
         <activity
             android:name=".activities.ActivityMenu"
-            android:label="Menu"></activity>
+            android:label="Menu" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
