--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         <activity android:name=".activities.ActivityMenuProduto"></activity>
         <activity android:name=".activities.ActivityListaProdutos" />
         <activity
-            android:name=".activities.ActivityProduto"
+            android:name=".activities.ActivityCadastrarProduto"
             android:label="Cadastro de Produto" />
         <activity
             android:name=".activities.ActivityMenu"
