Tela nova venda

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@drawable/icone_app"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.DarkActionBar">
-        <activity android:name=".activities.ActivityMenuProduto"></activity>
+        <activity android:name=".activities.ActivityNovaVenda"></activity>
+        <activity android:name=".activities.ActivityMenuVenda" />
+        <activity android:name=".activities.ActivityMenuProduto" />
         <activity android:name=".activities.ActivityListaProdutos" />
         <activity
             android:name=".activities.ActivityCadastrarProduto"
