--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@drawable/icone_app"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.DarkActionBar">
-        <activity android:name=".activities.ActivityCadastrarCliente"></activity>
+        <activity android:name=".activities.ActivityMenuCliente"></activity>
+        <activity android:name=".activities.ActivityCadastrarCliente" />
         <activity android:name=".activities.ActivityMenuProduto" />
         <activity android:name=".activities.ActivityListaProdutos" />
         <activity
