Detalhes de Produto Imagem funcionando.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
         android:roundIcon="@drawable/icone_app"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.DarkActionBar">
-        <activity android:name=".activities.ActivityDetalhesProduto"></activity>
+        <activity android:name=".activities.ActivityDetalhesProduto"
+            android:label="@string/titulo_tela_detalhes_produto">
+        </activity>
         <activity android:name=".activities.ActivityCarrinhoCompra" />
         <activity
             android:name=".activities.ActivityEditarProduto"
